# structa-server

./: .env.template  .excalidraw  .gitignore  .md  API_Documentation.md  README.md  pyproject.toml  requeriments.txt
criptography/: jwt_controls.py
flaskr/: __init__.py
flaskr/files_exports/: report_pdf.py
flaskr/files_exports/utils/: format_project_data.py
flaskr/graphql/: auth_token.py  graphql_blueprint.py  mutations.py  queries.py  schema.graphql  server.py
flaskr/graphql/auth/: auth_token.py
flaskr/graphql/auth/utils/: excepts.py
flaskr/graphql/resolvers/: mutations_projects.py  mutations_user.py  queries_projects.py  queries_user.py
flaskr/graphql/resolvers/projects_resolvers/: mutations_projects.py
flaskr/graphql/resolvers/tasks_resolvers/: mutations_tasks.py
flaskr/graphql/resolvers/users_resolvers/: mutations_user.py
flaskr/graphql/utils/: project_validations.py  task_search.py
flaskr/redis/: db_schemas.py  listProjects.py  listUsers.py  redis_controls.py  redis_projects_controls.py  redis_users_controls.py
flaskr/redis/data/: listProjects.py  listUsers.py
flaskr/redis/schema/: schemas.py
otp/: send_email_func.py  send_otp.py
src/config/: settings.py
src/criptography/: jwt_controls.py
src/flaskr/: __init__.py
src/flaskr/files_exports/utils/: project_by_id.py
src/flaskr/graphql/: server.py
src/flaskr/graphql/auth/: auth_token.py
src/flaskr/graphql/resolvers/projects_resolvers/: queries_projects.py
src/flaskr/graphql/utils/: project_permissions.py  task_validations.py  user_validations.py
src/otp/: send_email_func.py
(+3 files in other folders)
